Added class NullException due to last homework. Updated project according to homework exception process (try/catch)

--- a/Day7(Tanks)/Day7(Tanks).csproj
+++ b/Day7(Tanks)/Day7(Tanks).csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NullException.cs" />
     <Compile Include="Pantera.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
